--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "browerify-multiple-altjs-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.es6",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "browserify": "browserify --plugin tsify --transform babelify $npm_package_main"
   },
   "keywords": [],
   "author": "aereal",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "babelify": "^6.2.0",
+    "browserify": "^11.0.1",
+    "tsify": "^0.11.10"
+  }
 }
