--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.es6",
   "scripts": {
-    "browserify": "browserify --plugin tsify --transform babelify $npm_package_main"
+    "browserify": "browserify --plugin tsify --transform babelify $npm_package_main",
+    "gulp": "gulp"
   },
   "keywords": [],
   "author": "aereal",
@@ -13,6 +14,7 @@
   "dependencies": {
     "babelify": "^6.2.0",
     "browserify": "^11.0.1",
+    "gulp": "^3.9.0",
     "tsify": "^0.11.10"
   }
 }
